created simple architecture test, updated to the latest spring boot, fixed the code and docker files for java 17